--- a/src/sections/SecondSection/styles.module.scss
+++ b/src/sections/SecondSection/styles.module.scss
@@ -1,10 +1,22 @@
 .secondSection {
+    padding-top: 56px;
+    position: relative;
 
     ul {
         height: 56px;
+        position: absolute;
+        top: 0;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-around;
+        background: #e36c3f;
+
+
+        &.isFixed {
+            position: fixed;
+
+        }
 
         li {
             position: relative;
@@ -31,6 +43,7 @@
     }
 
     section {
+        scroll-margin: 56px;
         padding: 16px;
 
         h2 {
@@ -43,4 +56,40 @@
             border-radius: 6px;
         }
     }
+
+    .btnWrapper {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 64px;
+        padding: 0 16px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+        opacity: 0;
+        //保证按钮不会生效，因为它浮在上面 - fixed
+        //z-index: -1;
+        transform: translateY(64px);
+        transition: opacity .3s, transform .3s;
+
+        &.visible {
+            opacity: 1;
+            // z-index: 1;
+            transform: translateY(0);
+        }
+
+        img {
+            width: 100px;
+        }
+
+        button {
+            border: none;
+            padding: 8px 16px;
+            border-radius: 50px;
+            color: white;
+            background: #fb7299;
+        }
+    }
+
 }
